[package]
name = "bsc_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6"
thiserror = "1.0"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }

# Use the reth workspace crate via Git. If you want to pin to a specific commit, add `rev = "<commit>"`.
reth-primitives = { git = "https://github.com/bnb-chain/reth.git", package = "reth-primitives", branch = "main", default-features = false }
reth-provider = { git = "https://github.com/bnb-chain/reth.git", package = "reth-provider", branch = "main", default-features = false }
reth-chainspec = { git = "https://github.com/bnb-chain/reth.git", package = "reth-chainspec", branch = "main", default-features = false }
reth-db = { git = "https://github.com/bnb-chain/reth.git", package = "reth-db", branch = "main", default-features = false }
reth-node-api = { git = "https://github.com/bnb-chain/reth.git", package = "reth-node-api", branch = "main", default-features = false }
reth-node-ethereum = { git = "https://github.com/bnb-chain/reth.git", package = "reth-node-ethereum", branch = "main", default-features = false }
reth = { git = "https://github.com/bnb-chain/reth.git", package = "reth", branch = "main", default-features = false }
reth-static-file-types = { git = "https://github.com/bnb-chain/reth.git", package = "reth-static-file-types", branch = "main", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/bnb-chain/reth.git", package = "reth-ethereum-primitives", branch = "main", default-features = false }
# 修复：增加正确的 reth-db-models 依赖（crate 名含连字符；代码里用 reth_db_models::*）
reth-db-models = { git = "https://github.com/bnb-chain/reth.git", package = "reth-db-models", branch = "main", default-features = false }
# Alloy crates are best consumed from crates.io; using git failed to locate the packages by name.
alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-consensus = { version = "1.0.24", default-features = false }
